k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvcapp
  namespace: mvc
  labels:
    app: mvcapp
spec:
  selector:
    app: mvcapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
