k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mvc-ingress
  namespace: mvc
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - mvc.aksscaledemo.seanmck.dev
    secretName: tls-secret
  rules:
  - host: mvc.aksscaledemo.seanmck.dev
    http:
      paths:
      - backend:
          serviceName: mvcapp
          servicePort: 80
        path: /
